<resources>
    <string name="app_name">Motility Masterliness</string>
    <string name="sense_of_bar_name">Sense of Bar Clicker</string>
    <string name="speed_reaction_name">Speed Reaction Test</string>
    <string name="tap_button">Tap</string>
    <string name="set_results_button">Tap to set results</string>
    <string name="gotta_get_back_button">Repeat</string>
    <string name="back_to_the_past_button">Get back</string>
    <string name="real_beats">Beats passed:</string>
    <string name="expected_beats">Your beats:</string>
    <string name="set_time_period_hint">Set time period (in bpm)</string>
    <string name="apply">Apply</string>
    <string name="set_default_time_period">Time period is 120 beats per minute by default</string>
    <string name="period">Time period equals</string>
    <string name="sense_of_bar_intro">The game is supposed to improve your Sense of Bar™ by giving you an opportunity to click once a period.
        The game consists of three parts:\n
        in the first part you assign a duration in beats per minutes(the default interval is 120 bpm (half a second));
        \n
        in the second part the game starts (click on the screen once per period), and ends by pressing the big red button;
        \n
        in the third part your results summarize. And remember: the longer you play, the more accurate your result.
    </string>
    <string name="bpm">bpm</string>
    <string name="sense_of_bar_result_good">Congrats! Your Sense of Bar™ is in excellent condition! We recommend to play with another time period.</string>
    <string name="sense_of_bar_result_average">Train harder and improve your Sense of Bar™! Try again.</string>
    <string name="sense_of_bar_result_bad">Your Sense of Bar™ leaves much to be desired. Try to set duration to lower number.</string>
    <string name="ss_ms">seconds:milliseconds</string>
    <string name="best_time">Best time:</string>
    <string name="average_time">Average time:</string>
    <string name="introduction">Choose the game</string>
    <string name="wait">Wait</string>
    <string name="whack_a_mole_name">Whack-a-Mole</string>
    <string name="set_duration_hint">Set duration (in seconds)</string>
    <string name="set_tries">Set amount of tries</string>
    <string name="set_moles_hint">Set amount of moles (3 to 12)</string>
    <string name="preferences_duration" translatable="false">DURATION</string>
    <string name="preferences" translatable="false">PREFERENCES</string>
    <string name="preferences_counter" translatable="false">COUNTER</string>
    <string name="speed_reaction_intro">The game is supposed to improve your speed reaction by giving you an opportunity to click on screen.
        The game consists of three parts:\n
        in the first part you assign amount of tries (the default value is 1);
        \n
        in the second part the game starts (click on the screen when it is red);
        \n
        in the third part your results summarize.
    </string>
    <string name="whack_a_mole_intro">This famous game is supposed to improve your speed reaction and bullseye.
        The game consists of three parts:\n
        in the first part you assign duration in seconds (the default value is 10 seconds);
        \n
        in the second part the game starts (whack a mole);
        \n
        in the third part your hits summarize.
    </string>
    <string name="moles_hit_counter">Hits to the moles:</string>
    <string name="moles_duration">Seconds passed:</string>
    <string name="moles_per_second">Hits per second:</string>
    <string name="preferences_best_moles" translatable="false">HITS PER SECOND</string>
    <string name="best_moles_per_second">Best hits per second:</string>
    <string name="best_time_record">Best time record:</string>
    <string name="preferences_best_speed" translatable="false">SPEED</string>
    <string name="warning">It is not just for fun. Wait. Do not press the button when it is not red</string>
</resources>
