<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editPeriodText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/set_time_period_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editDurationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/set_duration_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textStyle="italic" />

    <Button
        android:id="@+id/apply"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:onClick="setPeriodAndDuration"
        android:text="@string/apply"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fontFamily="casual"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/sense_of_bar_intro"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
</LinearLayout>