<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text=""
            android:drawableEnd="@mipmap/ic_launcher"
            android:drawableRight="@mipmap/ic_launcher" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/sense_of_bar_button"
                style="@android:style/Widget.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="startBarGame"
                android:text="@string/sense_of_bar_name" />

            <Button
                android:id="@+id/speed_reaction_button"
                style="@android:style/Widget.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="startSpeedReactionGame"
                android:text="@string/speed_reaction_name" />

            <Button
                android:id="@+id/whack_a_mole_button"
                style="@android:style/Widget.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="startWhackAMoleGame"
                android:text="@string/whack_a_mole_name" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>